--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "angular-cli-ghpages": "^1.0.5",
     "eslint": "^8.28.0",
     "eslint-plugin-ngrx": "^2.0.0",
     "jasmine-core": "~4.0.0",
